# Histopathology

./: .gitignore  MODEL_ARCHITECTURES.md  README.md  codebase_inventory_outline.md  config.yaml  dae_kan_embedding.py  data_module.py  launch_tmux_ablation.py  launch_tmux_experiments.py  legacy_dae_embedding.py  legacy_dae_kan_model.py  minimal_dae_model.py  minimal_embedding.py  organize_images.py  pyproject.toml  requirements.txt  setup.py  simplified_dae_embedding.py  test_dimensions.py  test_model.py
histopathology/: plot_segmentations.ipynb  yolo_labels.txt
histopathology/configs/: README.md  experiments.yaml  wandb_config.yaml
histopathology/configs/ablations/: base.yaml  no_bam.yaml  no_eca.yaml  no_kan.yaml
histopathology/models/: README.md  __init__.py
histopathology/models/AttentionBottleNeckedDAE/models/: dae_embedding.py  histopathology_dataset.py  model.py  pl_training_pretrained.py  testing_model.ipynb
histopathology/models/Autoencoders/DeepEmbeddedClustering/: mnist.py  mnist_dec.py  test.py
histopathology/models/Phase2/: Clustering.py  mlp_embeddings.py
histopathology/models/RBM/: rbm.py
histopathology/models/autoencoders/: __init__.py
histopathology/models/components/: __init__.py
histopathology/models/utils/: __init__.py
histopathology/notebooks/: 1.0-drm-datainspection.ipynb  2.0-drm-dataprep.ipynb  AnnotHepar.csv  test.ipynb
histopathology/src/: __init__.py
histopathology/src/analysis/: __init__.py
histopathology/src/data_pipeline/: convertTIF2PNG.py  histopathology_dataset.py  histopathology_dataset.py.bak2  make_dataset.py  preprocessing.py  process_pannuke.py
histopathology/src/interpretability/: __init__.py
histopathology/src/models/: __init__.py
histopathology/src/training/: __init__.py
histopathology/wandb/: latest-run
histopathology/wandb/run-20240725_112737-cwaxnscp/: run-cwaxnscp.wandb
histopathology/wandb/run-20240725_112942-qc9fk1uw/: run-qc9fk1uw.wandb
histopathology/wandb/run-20240725_113030-1xfo3lel/: run-1xfo3lel.wandb
histopathology/wandb/run-20240725_113255-y7r5698a/: run-y7r5698a.wandb
histopathology/wandb/run-20240725_120100-jseja0ow/: run-jseja0ow.wandb
histopathology/wandb/run-20240727_125039-0zmoeccz/: run-0zmoeccz.wandb
histopathology/wandb/run-20240727_125248-exs025vv/: run-exs025vv.wandb
histopathology/wandb/run-20240727_181941-28m0zp66/: run-28m0zp66.wandb
histopathology/wandb/run-20240727_182047-emnql2c2/: run-emnql2c2.wandb
logs/: base_env.sh  base_launch.sh  no_bam_env.sh  no_bam_launch.sh  no_eca_env.sh  no_eca_launch.sh  no_kan_env.sh  no_kan_launch.sh
scripts/embedding_extraction/: test_minimal_dae_extractor.py
src/models/embedding_extraction/: base.py
tests/: test_dataset_augmentation.py  test_dimensions.py  test_model.py
wandb/: latest-run
wandb/offline-run-20250621_012140-41gdmg82/: run-41gdmg82.wandb
wandb/offline-run-20250621_012140-41gdmg82/files/: wandb-metadata.json
wandb/offline-run-20250621_012538-fbuo86jz/files/: requirements.txt  wandb-metadata.json
wandb/offline-run-20250621_012613-ds2htrsf/files/: wandb-metadata.json
wandb/offline-run-20250621_012748-4gj0hl3v/files/: wandb-metadata.json
wandb/offline-run-20250621_012910-u02q3caw/files/: wandb-metadata.json
wandb/offline-run-20250621_013102-0aopdp99/files/: wandb-metadata.json
wandb/offline-run-20250621_013318-4wmd8zp4/files/: requirements.txt  wandb-metadata.json
wandb/offline-run-20250621_013500-glanty8c/files/: wandb-metadata.json
(+71 files in other folders)
