[tool.poetry]
name = "histopathology"
version = "0.1.0"
description = ""
authors = ["dzakirm <malikdzaki16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
altair = "^5.2.0"
polars = "^0.20.13"
dvc = "^3.48.2"
pydicom = "^2.4.4"
scikit-learn = "^1.4.1.post1"
mlxtend = "^0.23.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
pyyaml = "^6.0.1"
scikit-image = "^0.22.0"
opencv-python = "^4.9.0.80"
nibabel = "^5.2.1"
simpleitk = "^2.3.1"
itk = "^5.3.0"
mayavi = "^4.8.1"
statsmodels = "^0.14.1"
imbalanced-learn = "^0.12.0"
sphinx = "^7.2.6"
gdown = "^5.1.0"
monai = "^1.3.0"
pytorch-lightning = "^2.2.1"
pytorch-ignite = "^0.4.13"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
