[tool.poetry]
name = "histopathology"
version = "0.1.0"
description = ""
authors = ["dzakirm <malikdzaki16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.16,<3.13"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
altair = "^5.2.0"
polars = "^0.20.13"
dvc = "^3.48.2"
pydicom = "^2.4.4"
scikit-learn = "^1.4.1.post1"
mlxtend = "^0.23.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
pyyaml = "^6.0.1"
scikit-image = "^0.22.0"
nibabel = "^5.2.1"
simpleitk = "^2.3.1"
itk = "^5.3.0"
statsmodels = "^0.14.1"
imbalanced-learn = "^0.12.0"
sphinx = "^7.2.6"
gdown = "^5.1.0"
monai = "^1.3.0"
pytorch-lightning = "^2.2.1"
pytorch-ignite = "^0.4.13"
pillow = "^10.2.0"
ray = {extras = ["complete"], version = "^2.10.0"}
cuda-python = "^12.4.0"
cucim = "^23.10.0"
albumentations = "^1.4.2"
jupyter = "^1.0.0"
jupyterlab = "^4.1.5"
notebook = "^7.1.2"
voila = "^0.5.5"
openslide-python = "^1.3.1"
patchify = "^0.2.3"
tifffile = "^2024.2.12"
lightning = "^2.2.1"
torchinfo = "^1.8.0"
seaborn = "^0.13.2"
tensorboardx = "^2.6.2.2"
pretty-errors = "^1.2.25"
numba = "^0.59.1"
umap-learn = "^0.5.6"
tqdm = "^4.66.4"
boilr = "^0.7.4"
tensorboard = "^2.16.2"
wandb = "^0.17.0"
h5py = "^3.11.0"
pykan = "^0.0.5"
timm = "^1.0.3"
pytorch-attention = "^1.0.0"
torch-summary = "^1.4.5"
modin = "^0.31.0"
plotly = "^5.22.0"
pyarrow = "^17.0.0"
apache-airflow = "^2.9.3"
openml = "^0.14.2"
pyspark = "^3.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
