# Histopathology Project Configuration
# 
# This project has been migrated from Poetry to uv for dependency management.
# Dependencies are now managed through requirements.txt and also included in pyproject.toml
# Python version constraint: >=3.9.16,<3.13

[project]
name = "histopathology"
version = "0.1.0"
description = "Histopathology analysis tools"
authors = [
    {name = "dzakirm", email = "malikdzaki16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.16,<3.13"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytorch-lightning>=1.7.0",
    "wandb>=0.12.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "Pillow>=8.2.0",
    "torchmetrics>=0.7.0",
    "captum>=0.4.0",
    "umap-learn>=0.5.0",
    "psutil>=5.8.0",
    "GPUtil>=1.4.0",
    "pyyaml>=6.0.0",
    "rich>=10.0.0",
    "omegaconf>=2.1.0",
    "click>=8.0.0",
    "tqdm>=4.62.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
